--- a/hello_git.ipynb
+++ b/hello_git.ipynb
@@ -25,16 +25,7 @@
     "\n",
     "* 서버는 설치하지 않고 sign in\n",
     "    * github.com 또는\n",
-    "    * bitbucket.com\n",
-    "\n",
-    "### 1.1.2 GUI\n",
-    "\n",
-    "* github에서 제공하는 GitHub Desktop\n",
-    "    * Drag and Drop\n",
-    "        * git \"Upload files\" 기능을 사용할 수 있다. 디렉토리를 업로드할 수 있다.\n",
-    "      https://github.com/blog/2105-upload-files-to-your-repositories    \n",
-    "* git-scm에서 제공하는 git for winodws\n",
-    "* GitKraken, TortoiseGit, SourceTree, SmartGit\n"
+    "    * bitbucket.com"
    ]
   },
   {
@@ -42,6 +33,40 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 1.1.2 GUI\n",
+    "\n",
+    "* github에서 제공하는 GitHub Desktop\n",
+    "* git-scm에서 제공하는 git for winodws\n",
+    "* GitKraken, TortoiseGit, SourceTree, SmartGit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 1.1.3 설치하지 않고, 이용하기: 가장 쉬운 방법\n",
+    "\n",
+    "* github \"Drag and Drop\" https://github.com/blog/2105-upload-files-to-your-repositories\n",
+    "    * repository를 생성한다 (아래 참조)\n",
+    "        * README, .gitignore 생성을 클릭한다 (gitignore에 제외할 파일 확장자를 넣는다, 아래 참조)\n",
+    "    * repository로 이동한다. \n",
+    "    * \"Upload files\" 버튼을 클릭한다.\n",
+    "        * 디렉토리를 업로드할 수 있다.\n",
+    "        * 디렉토리를 업로드하고 나서는, 디렉토리를 열어서 파일을 올릴 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
