--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -10,8 +10,11 @@
    "source": [
     "# 1. Strategy 패턴\n",
     "\n",
+    "\n",
+    "## S.1 소개\n",
+    "\n",
     "* Strategy 패턴은 Behavioral Design Pattern\n",
-    "* Policy Pattern\n",
+    "* Policy Pattern이라고 한다. 여러 정책이 존재하고, 경우에 따라 다른 정책을 적용.\n",
     "* 알고리즘이 서로 다르고, 실행시점에 하나를 선택하여 실행하는 경우\n",
     "    * 라면의 조리가 서로 다른 경우\n",
     "    * 영화를 보는 경우, 누구는 초대권, 누구는 멤버쉽 할인 등 서로 다른 경우\n",
@@ -32,16 +35,19 @@
     "요소 | 설명\n",
     "---|---\n",
     "name | Strategy\n",
-    "problem | 알고리즘 서로 다른 버전이 존재해서, if문으로 처리해야 하거나 중복이 발생 \n",
-    "solution | 중복을 공통화, 실행시점에 맞는 알고리즘을 호출\n",
-    "consequence | OCP"
+    "problem | 알고리즘 서로 다른 버전이 존재해서, if문으로 처리해야 하거나 중복이 발생.\n",
+    "solution | 중복을 공통화, 실행시점에 맞는 알고리즘을 호출.\n",
+    "consequence | OCP 수정할 경우 Strategy를 추가하고 나머지는 변경하지 않아도 된다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -62,7 +68,7 @@
     }
    },
    "source": [
-    "## 2. 문제\n",
+    "## S.2 문제\n",
     "\n",
     "* 경우에 따라 서로 다른 여러 알고리즘이 존재\n",
     "* 알고리즘이 실행시점에 결정이 되고\n",
@@ -77,7 +83,7 @@
     }
    },
    "source": [
-    "## 3. 설계\n",
+    "## S.3 설계\n",
     "\n",
     "클래스 | 설명\n",
     "-----|-----\n",
@@ -150,7 +156,7 @@
     }
    },
    "source": [
-    "## 4. 사례\n",
+    "## S.4 사례\n",
     "\n",
     "사례 | 설명\n",
     "------|------\n",
@@ -437,7 +443,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -476,7 +485,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -494,7 +506,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -591,11 +606,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### 1.4.2 정렬\n",
+    "### S.4.2 정렬\n",
     "\n",
-    "* /*출처 -r 50-75 caseSort.md*/\n",
     "* 무엇이 문제인가? 중복되는가? 재사용할 수 있는가? 변하는 부분이 어떤 부분인가?\n",
     "    * 문제는 sort가 중복 -> v0에서 재현\n",
     "\n",
@@ -615,7 +633,7 @@
     }
    },
    "source": [
-    "##### v0\n",
+    "#### S.4.2.1 v0\n",
     "\n",
     "* 숫자와 문자열을 정렬하는 경우, 알고리즘이 중복된다.\n",
     "* 중복정도는 비교하는 부분을 제외하고는 거의 같다.\n"
@@ -658,7 +676,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "* String객체는 compareTo()를 사용하여 비교할 수 있다."
@@ -668,7 +689,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -726,7 +750,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "* Integer객체는 부등호로 비교한다.\n",
@@ -737,7 +764,10 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -797,32 +827,31 @@
     }
    },
    "source": [
-    "#### v1:  template패턴\n",
+    "#### S.4.2.2 v1\n",
     "\n",
+    "* template패턴\n",
     "* v0에서의 중복\n",
     "    * 정수, 문자, 객체마다 비교하는 알고리즘이 다름\n",
     "        * 정수는 단순히 빼주면 됨\n",
     "        * 문자는 String.compareTo()를 사용\n",
     "        * 객체는 비교하려는 대상에 따라 다름\n",
-    "    * 문제해결\n",
-    "        * Comparable interface 구현\n",
-    "            * compareTo() 만들고, sort()에서 호출해서 해결 (template pattern)\n",
-    "        * 라이브러리 sort이용\n",
-    "            * Arrays.sort() (Array를 구현한 경우)\n",
-    "            * Collections.sort() (Collection interface를 구현한 경우)\n",
-    "            * compareTo()를 호출 (template pattern)\n"
+    "* 문제해결\n",
+    "    * Comparable interface 구현\n",
+    "        * compareTo() 만들고, sort()에서 호출해서 해결 (template pattern)\n",
+    "    * 라이브러리 sort이용\n",
+    "        * Arrays.sort() (Array를 구현한 경우)\n",
+    "        * Collections.sort() (Collection interface를 구현한 경우)\n",
+    "        * compareTo()를 호출 (template pattern)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "* 숫자, 문자의 compareTo()를 이용한 정렬"
    ]
@@ -1078,7 +1107,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "* WeightTurtle\n",
     "* jshell로 실행"
@@ -1167,7 +1200,7 @@
     }
    },
    "source": [
-    "#### v2\n",
+    "#### S.4.2.3 v2\n",
     "\n",
     "* v2 comparator comparable\n",
     "    * v0 문제를 다른 방식으로 해결\n",
@@ -1399,9 +1432,8 @@
     }
    },
    "source": [
-    "## 시작-1 java.util.Comparator를 이용해 구현\n",
+    "## S-1 java.util.Comparator를 이용해 구현\n",
     "\n",
-    "* 수요일까지 제출 (git)\n",
     "* 1-2는 보고서로 제출\n",
     "\n",
     "### 1-1 클래스다이어그램을 그리기\n",
